# aljabr

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  linop.py  pyproject.toml
aljabr/: __init__.py  linop.py
linop/: linop.py
src/aljabr/: __init__.py  linop.py
