[tool.poetry]
name = "linearop"
version = "0.1.0"
description = "Linear operators interfaces"
authors = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
maintainers = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
readme = "README.md"
license = "Public Domain"
repository = "https://github.com/forieux/linearop/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/forieux/qmm/issues"
"Author webpage" = "https://pro.orieux.fr/"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20.2"
udft = {extras = ["fftw"], version = "^3.2.0"}
PyWavelets = "^1.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
icecream = "^2.1.0"
mypy = "^0.812"
pytype = "^2021.4.15"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
