[tool.poetry]
name = "aljabr"
version = "0.2.0"
description = "Linear operators interfaces"
authors = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
maintainers = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
readme = "README.md"
license = "Public Domain"
repository = "https://github.com/forieux/aljabr/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",]
include = ["py.typed", "LICENSE"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/forieux/aljabr/issues"
"Author webpage" = "https://pro.orieux.fr/"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.20.2"
udft = "^3.2.0"
PyWavelets = "^1.1.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
icecream = "^2.1.0"
mypy = "^0.812"
pytype = "^2021.4.15"
pytest = "^6.2.3"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-parents = 10
disable = ["bad-continuation", "import-error", "line-too-long"]
