[tool.poetry]
name = "aljabr"
version = "0.4.0"
description = "Linear operators interfaces"
authors = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
maintainers = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
readme = "README.md"
license = "Public Domain"
repository = "https://github.com/forieux/aljabr/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",]
include = ["py.typed", "LICENSE"]
packages = [{include = "aljabr", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/forieux/aljabr/issues"
"Author webpage" = "https://pro.orieux.fr/"

[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = "^1.20.2"
udft = "^3.2.0"
PyWavelets = "^1.1.1"
scipy = "^1.7.1"
pytest = "^8.2.2"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
icecream = "^2.1.0"
mypy = "^0.812"
pytest = ">=7"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-parents = 10
disable = ["bad-continuation", "import-error", "line-too-long",]

[tool.pytest.ini_options]
pythonpath = "./src"
addopts = [
    "--import-mode=importlib",
]
